# Parrhesia

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  gizmo
app/: Cargo.toml  main.rs  tauri.conf.json
app/servers/: main_server.rs  mod.rs
app/services/: main_site.rs  mod.rs
backend/: Cargo.toml  main.rs
backend/api/: Cargo.toml
backend/database/: Cargo.toml
backend/routing/: Cargo.toml  home.rs  lib.rs
backend/server/: api_auth.rs  database.rs  mod.rs
backend/server_thing/: api.rs
backend/services/: Cargo.toml  lib.rs
connection_test/: index.js  package.json
dev_sandbox/: Cargo.toml
dev_sandbox/src/: main.rs
framework/: Cargo.toml  lib.rs
framework/gizmo/: Cargo.toml  main.rs  setup.rs
framework/servers/: mod.rs  tcp_server.rs
framework/services/: byoh.rs  mod.rs  static_data.rs
frontend/: Cargo.toml  build.rs  index.html  package.json
frontend/src/: main.rs
frontend/src/routes/: +page.svelte  Button.svelte  Login.svelte
frontend/src/routes/test/: +page.svelte
gizmo-src/: Cargo.toml  main.rs  setup.rs
migration/src/: lib.rs  m1_create_user_table.rs
public/: Cargo.toml  index.html
src/: main.rs
src/frontend/: package-lock.json  package.json
src/frontend/src/routes/: +page.svelte  Button.svelte  Login.svelte
src/server/: api.rs  api_auth.rs  database.rs  mod.rs
