[workspace]
members = [
    "app",
    # "backend",
    "framework",
    "framework/gizmo",
    # "dev_sandbox",
    "backend/api",
    "backend/database",
    "backend/routing",
    # "backend/services",
    # "public",
]

[workspace.dependencies]
tokio = { version = "1.22.0", features = [ "full" ] }
async-trait = "0.1.59"
anyhow = "1.0.66"
futures = "0.3.25"
enum_dispatch = "0.3.8"
axum = "0.6.1"
automod = "1.0.4"