[workspace]
members = [
    "app",
    "frontend",
    "server",
]

[workspace.dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59" 
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
sycamore = { version = "0.8", features = ["suspense"] }