[workspace]
members = [
    "frontend",
    "app",
    "server",
]

[workspace.dependencies]
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.61" 
serde = { version = "1.0.159", features = ["derive"] }
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
sycamore = { version = "0.8.2", features = ["suspense"] }
tauri = { version = "1.2.4", features = ["api-all"] }
serde_json = "1.0.95"
tauri-build = { version = "1.2.1", features = [] }