[package]
name = "parrhesia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "parrhesia"
path = "main.rs"

[dependencies]

routing = { path = "./routing" }

tokio = { version = "1.21.2", features = [ "full" ] }
poem = { version = "1.3.48", features = [ "static-files" ] }

# Internal
# surreal-poem = { path = "../SurrealDB-poem" }
# poem-proxy = { git = "https://github.com/Parrhesia-Base/poem-proxy.git" }

# External
# poem = { version = "1.3.48", features = [ "static-files" ] }
# tokio = { version = "1.21.2", features = [ "full" ] }
# dirs = "4.0.0"
# anyhow = "1.0.66"
