[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[lib]
name = "framework"
path = "lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem.workspace = true
async-trait.workspace = true
anyhow.workspace = true
futures.workspace = true
enum_dispatch.workspace = true