[package]
name = "routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "routing"
path = "lib.rs"

[dependencies]
database = { path = "../database" }
api = { path = "../api" }
services = { path = "../services" }
poem = { version = "1.3.48", features = [ "static-files" ] }