[package]
name = "gizmo-src"
version = "0.1.0"
edition = "2021"
default-run = "setup"

# [workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gizmo"
path = "main.rs"

[[bin]]
name = "setup"
path = "setup.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
